# gatti

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
compiler/gattic/: Cargo.toml
compiler/gattic/src/: main.rs
compiler/gattic_errors/: Cargo.toml  build.rs
compiler/gattic_errors/src/: lib.rs  spans.rs  style.rs
compiler/gattic_interposer/: Cargo.toml
compiler/gattic_interposer/src/: lib.rs
compiler/gattic_lexer/: Cargo.toml
compiler/gattic_lexer/src/: lib.rs  literals.rs  tokens.rs
compiler/gattic_parser/: Cargo.toml
compiler/gattic_parser/src/: block.rs  decl.rs  expr.rs  lib.rs  stmt.rs  types.rs
compiler/gattic_tokens/: Cargo.toml
compiler/gattic_tokens/src/: lib.rs
src/: errors.rs  interposer.rs  lexer.rs  lib.rs  main.rs  parser.rs  toks.rs
src/errors/: style.rs
src/lexer/: literals.rs  tokens.rs
src/parser/: block.rs  decl.rs  expr.rs  precedence.rs  stmt.rs  types.rs
