[package]
name = "gattic_interposer"
description = "Gatti's semicolon interposer library."

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]

# internal libs
gattic_errors.workspace = true
gattic_tokens.workspace = true
gattic_lexer.workspace = true
